# dronebot-sim

./: .gitignore  README.md  pyproject.toml
configs/: drone_base.yaml  drone_hex_ndaa_budget.yaml
models/: drone_base.xml  drone_hex_base.xml
scripts/: demo_attitude.py  demo_hover.py
