[project]
name = "dronebot-sim"
version = "0.1.0"
description = "Drone base simulation and control with MuJoCo"
requires-python = ">=3.10"
dependencies = [
  "mujoco>=3.1.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "gymnasium>=0.29",
  "matplotlib>=3.7",
  "pyyaml>=6.0",
  "pydantic>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
  "mypy>=1.7"
]
